--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,3 +384,13 @@
 .btn-primary:hover, .btn-primary:focus {
     background: #131579;
 }
+
+#fireworksAnimation {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+}
